tests/should_fail/let_destructure_tuple_on_int.nv
module test
// let destructure: tuple pattern on Int (not a tuple)
let x = 42
let (a, b) = x
